tests/error/function_nested.gw
// [contains] 
 function void test()
{
  function void nested(){}
}
